# edu-pilot

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0e2397c1f7eb_create_branches_table.py  31416d849337_add_contacts_table.py  390d4d9e088f_create_roles_table.py  49b618d3c7ea_add_roles_permissions_table.py  49e79ec25af0_add_branches_table.py  4cbaaa919dc3_create_permissions_table.py  6cff0fbc853e_add_users_table.py  7d755d8eb713_create_regions_table.py  850e78404067_add_level_access_column_to_roles_.py  929ee29c4a6a_add_roles_table.py  93a268456cb6_add_regions_table.py  aaf2d5b70e1b_delete_roles_permissions_table.py  d4600617e30d_add_roles_permissions_table.py  d8aced4dc4c3_create_role_permissions_table.py  e74c88dafde5_add_users_table.py  e8d510dd5b8d_add_permissions_table.py
backend/app/: main.py
backend/app/api/dependencies/: auth.py  database.py
backend/app/consts/: access.py  contacts.py
backend/app/core/: config.py  consts.py  types.py  utils.py  validators.py
backend/app/core/config/: __init__.py  common.py  types.py  (+3 more)
backend/app/exceptions/: auth.py  base.py  users.py
backend/app/models/: __init__.py  base.py  branches.py  contacts.py  mixins.py  permissions.py  regions.py  roles.py  roles_permissions.py  users.py
backend/app/repositories/: base.py  branches.py  roles.py  users.py
backend/app/schemas/: base.py  mixins.py  roles.py  security.py  users.py
backend/app/services/: base.py  branches.py  roles.py  users.py
backend/app/utils/: text.py
(+11 files in other folders)
